<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KidKoder</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="company_logo">company Logo</string>
    <string name="children">Children</string>
    <string name="quick_links">Quick-Links</string>
    <string name="settings">Settings</string>
    <string name="allergies">Allergies</string>
    <string name="parse_com_application_id_">PARSE.COM Application ID #</string>
    <string name="parse_com_client_key_">PARSE.COM Client Key #</string>
    <string name="app_id_num">sF8m2jJo7c3kQoenTq9UG67Rk3pnPEw7prrf4ZfR</string>
    <string name="app_key_num">OnuGanjP6xKwQV7JOUC6wUMsmGiUlbxhyitxHS1P</string>
    <string name="gender_icon">gender Icon</string>
    <string name="child_name_default">Child Name</string>
    <string name="local_school_website">Local School Website</string>
    <string name="school_string_address">http://www.gsd54.org/site/default.aspx?PageID=1</string>

</resources>