<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood"
    tools:context=".MainActivity" >

	<ImageView
        android:id="@+id/imageGenderIcon"
        android:contentDescription="@string/company_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/daycare_logo_300px" /> 

    <Button
        android:id="@+id/btnChildren"
        style="@style/ButtonText_ylw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageGenderIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:alpha="1"
        android:background="@drawable/button_selector"
        android:text="@string/children"
        android:typeface="normal" />

    <Button
        android:id="@+id/btnAllergies"
        style="@style/ButtonText_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnChildren"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/allergies" />

    <Button
        android:id="@+id/btnQlinks"
        style="@style/ButtonText_grn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAllergies"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/quick_links" />

    <Button
        android:id="@+id/btnSettings"
        style="@style/ButtonText_blu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnQlinks"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/settings" />

</RelativeLayout>